--- a/PetStoreAPI/appsettings.json
+++ b/PetStoreAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PetStore": "Data Source=petstore.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
