--- a/PetStoreUI/appsettings.json
+++ b/PetStoreUI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApiSettings": {
+    "PetStoreApiUrl": "http://localhost:5013/"
+  },
   "AllowedHosts": "*"
 }
