--- a/PetStoreUI/appsettings.json
+++ b/PetStoreUI/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ApiSettings": {
-    "PetStoreApiUrl": "http://localhost:5134" 
+  "ConnectionStrings": {
+    "PetStore": "Data Source=../PetStoreAPI/petstore.db" 
   },
   "Logging": {
     "LogLevel": {
