--- a/PetStoreUI/PetStoreUI.csproj
+++ b/PetStoreUI/PetStoreUI.csproj
@@ -2,6 +2,16 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PetStoreLibrary\PetStoreLibrary.csproj" />
+    <ProjectReference Include="..\PetStoreAPI\PetStoreAPI.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <PropertyGroup>
