--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 **/.cache/
 **/.obj/
 **/.bin/
+/PetStoreReact/node_modules/.cache
+PetStoreReact/node_modules/.cache/default-development/0.pack
+PetStoreReact/node_modules/.cache/default-development/10.pack
+PetStoreReact/node_modules/.cache/default-development/11.pack
+PetStoreReact/node_modules/.cache/default-development/index.pack
+PetStoreReact/node_modules/.cache/default-development/index.pack.old
+PetStoreReact/node_modules/.cache/.eslintcache
